--- a/src/ConsoleApp.WebScrapper/ConsoleApp.WebScrapper.csproj
+++ b/src/ConsoleApp.WebScrapper/ConsoleApp.WebScrapper.csproj
@@ -9,10 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Crawler.Domain\Crawlers.Domain.csproj" />
+    <ProjectReference Include="..\Crawlers.Application\Crawlers.Application.csproj" />
+    <ProjectReference Include="..\Crawlers.Infra.WebScrapperServices\Crawlers.Infra.WebScrapperServices.csproj" />
     <ProjectReference Include="..\Infra.Databases\Crawler.Infra.Databases.csproj" />
   </ItemGroup>
 
