--- a/src/Crawler.Domain/Crawlers.Domain.csproj
+++ b/src/Crawler.Domain/Crawlers.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\ObjectValues\Urls\Builders\" />
+  </ItemGroup>
+
 </Project>
