--- a/src/Crawlers.Infra.WebScrapperServices/Crawlers.Infra.WebScrapperServices.csproj
+++ b/src/Crawlers.Infra.WebScrapperServices/Crawlers.Infra.WebScrapperServices.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Crawler.Domain\Crawlers.Domain.csproj" />
+    <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
   </ItemGroup>
 
 </Project>
