--- a/src/Tests.Crawler.Domain/Tests.Crawler.Domains.csproj
+++ b/src/Tests.Crawler.Domain/Tests.Crawler.Domains.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Crawler.Domain\Crawlers.Domain.csproj" />
+    <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
   </ItemGroup>
 
 </Project>
