--- a/src/ConsoleApp.WebScrapper/ConsoleApp.WebScrapper.csproj
+++ b/src/ConsoleApp.WebScrapper/ConsoleApp.WebScrapper.csproj
@@ -20,7 +20,7 @@
     <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
     <ProjectReference Include="..\Crawlers.Application\Crawlers.Application.csproj" />
     <ProjectReference Include="..\Crawlers.Infra.WebScrapperServices\Crawlers.Infra.WebScrapperServices.csproj" />
-    <ProjectReference Include="..\Infra.Databases\Crawler.Infra.Databases.csproj" />
+    <ProjectReference Include="..\Infra.Databases\Crawlers.Infra.Databases.csproj" />
   </ItemGroup>
 
 </Project>
