--- a/src/Crawlers.Application/Crawlers.Application.csproj
+++ b/src/Crawlers.Application/Crawlers.Application.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
-    <ProjectReference Include="..\Infra.Databases\Crawler.Infra.Databases.csproj" />
+    <ProjectReference Include="..\Infra.Databases\Crawlers.Infra.Databases.csproj" />
   </ItemGroup>
 
 </Project>
