Created event listener for errors and warning logging.

--- a/src/Crawlers.Infra.WebScrapperServices/Crawlers.Infra.WebScrapperServices.csproj
+++ b/src/Crawlers.Infra.WebScrapperServices/Crawlers.Infra.WebScrapperServices.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Infra.Services\Core.Infra.Services.csproj" />
     <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
   </ItemGroup>
 
