created exame version, refactored some classes and bug fixes in html agility pack

--- a/src/ConsoleApp.WebScrapper/appsettings.json
+++ b/src/ConsoleApp.WebScrapper/appsettings.json
@@ -1,5 +1,6 @@
 {
   "MockWebNavigator": false,
-  "TotalThreads": 24,
-  "TotalPackage":  1000
+  "TotalThreads": 1,
+  "TotalPackage": 1000,
+  "Site": "Exame",
 }
