--- a/src/ConsoleApp.WebScrapper/appsettings.json
+++ b/src/ConsoleApp.WebScrapper/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MockWebNavigator": false,
-  "TotalThreads": 1,
-  "TotalPackage": 1000,
-  "Site": "Exame",
+  "TotalThreads": 16,
+  "TotalPackage": 10,
+  "Site": "Exame"
 }
